--- a/public/index.css
+++ b/public/index.css
@@ -1,27 +1,125 @@
-*{
-    font-family:Helvetica;
+* {
+  font-family: Helvetica;
 }
 
-#nav{
-    padding:20px;
-    display:flex;
-    justify-content:space-evenly;
-    font-size:20px;
-    background-color:black;
+#nav {
+  padding: 20px;
+  display: flex;
+  justify-content: space-evenly;
+  font-size: 20px;
+  background-color: black;
 }
 
-.Card{
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-    background-color:#05C3DE;
-    color:white;
-    width:25vw;
-    padding:15px;
+.Card {
+  display: flex;
+  margin: 2vw;
+  text-align: center;
+  flex-direction: column;
+  align-items: center;
+  background-color: #05c3de;
+  color: white;
+  width: 25vw;
+  padding: 15px;
+  box-shadow: 0 2px 1px rgba(0, 0, 0, 0.09), 0 4px 2px rgba(0, 0, 0, 0.09),
+    0 8px 4px rgba(0, 0, 0, 0.09), 0 16px 8px rgba(0, 0, 0, 0.09),
+    0 32px 16px rgba(0, 0, 0, 0.09);
 }
 
-#myroutines-routines{
-    justify-content:space-evenly;
-    display:flex;
-    flex-wrap:wrap;
+#myroutines-routines {
+  justify-content: space-evenly;
+  display: flex;
+  flex-wrap: wrap;
+}
+#routineCard-container {
+  height: fit-content;
+}
+#routineCard-activities {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+#activitiesRoutineCard {
+  width: 10vw;
+  border: solid #eff 2px;
+  font-size: 20px;
+  margin: 1vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 65vh;
+}
+#activitiesRoutineCard button {
+  align-self: flex-end;
+}
+#myRoutinesContainer {
+  margin-top: 5vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.12),
+    0 4px 4px rgba(0, 0, 0, 0.12), 0 8px 8px rgba(0, 0, 0, 0.12),
+    0 16px 16px rgba(0, 0, 0, 0.12);
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 2vh;
+  background-color: #05c3de;
+  color: #eff;
+}
+#routinesForm {
+  width: 50vw;
+}
+
+
+
+.test {
+  color: #ff3131;
+}
+.title {
+  color: #eff;
+  font-weight: bold;
+}
+#routines-container {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+#activitiesForm {
+  width: 50vw;
+}
+#activities-container {
+  margin-top: 5vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#activities-card-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+#homePage{
+    margin: 2vw;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    color: #eff;
+    background-color: #05c3de;
+    box-shadow: 0 2px 1px rgba(0, 0, 0, 0.09), 0 4px 2px rgba(0, 0, 0, 0.09),
+    0 8px 4px rgba(0, 0, 0, 0.09), 0 16px 8px rgba(0, 0, 0, 0.09),
+    0 32px 16px rgba(0, 0, 0, 0.09);
+    height: 35vh;
+    width: 40vw;
+}
+#homepage-container{
+    display: flex;
+    justify-content: center;
 }
